fix issue that the sg-cloud section is not high enough when it gets visible when going back to the delpoyment methods

--- a/website/src/css/pages/_get-started.scss
+++ b/website/src/css/pages/_get-started.scss
@@ -79,6 +79,8 @@
                 line-height: 1.25rem;
             }
         }
+        #sg-cloud {
+        }
         .title {
             font-size: 2.25rem;
             line-height: 3.25rem;
@@ -145,6 +147,9 @@
             .back-link {
                 display: inline-block;
             }
+        }
+        .high {
+            height: 706px;
         }
     }
 }
